# spot_moveit_ros2

./: .gitignore  .gitmodules  README.md  install_spot_ros2.sh  requirements.txt
demo/: CMakeLists.txt  README.md  package.xml
demo/launch/: demo.launch.py  mtc.launch.py
demo/scripts/: navigate_to_fiducial.py
demo/src/: april_tag_detection.cpp  cartesian_movement_to_waypoints.cpp  move_object_over_obstacle.cpp  move_to_joint_space_goal.cpp  move_to_pose.cpp  move_to_pose_around_obstacle.cpp  mtc_node.cpp  mtc_test.cpp  navigate_to_fiducial.cpp  navigate_to_pose.cpp  path_constrained_movement.cpp
spot_behavior_msgs/: CMakeLists.txt  package.xml
spot_behavior_msgs/action/: DetectAprilTags.action  NavigateToFiducial.action  NavigateToPose.action
spot_behavior_msgs/msg/: AprilTagDetection.msg
spot_behavior_tree/: CMakeLists.txt  README.md  package.xml
spot_behavior_tree/behavior_trees/: add_object_to_planning_scene.xml  add_object_to_planning_scene_template.xml  close_gripper.xml  demo_moveit_cartesian_movement_to_waypoints.xml  demo_moveit_move_object_over_obstacle.xml  demo_moveit_move_to_joint_space_goal.xml  demo_moveit_move_to_pose.xml  demo_moveit_move_to_pose_around_obstacle.xml  demo_mtc_pick_and_place_object.xml  move_object_over_obstacle.xml  move_to_joint_space_goal.xml  move_to_joint_states.xml  move_to_named_target_template.xml  move_to_pose.xml  move_to_pose_around_obstacle.xml  move_to_pose_mtc.xml  move_to_pose_template.xml  move_to_waypoints_cartesian.xml  moveit_add_object_to_planning_scene.xml  moveit_constrainted_movement.xml  moveit_move_to_joint_space_goal.xml  moveit_move_to_named_target.xml  moveit_move_to_pose.xml  mtc_attach_object_to_link.xml  mtc_cartesian_test.xml  mtc_detach_object_from_link.xml  mtc_grasp_object.xml  mtc_move_to_place_object.xml  mtc_plan_move_to_group_state.xml  mtc_plan_move_to_pose.xml  mtc_tests.xml  open_close_gripper.xml  open_gripper.xml  path_constrainted_movement.xml  setup_move_group_and_add_object.xml  template_add_object_to_planning_scene.xml  template_move_to_joint_space_goal.xml  template_move_to_named_target.xml  template_move_to_pose.xml  template_move_to_pose_mtc.xml
spot_behavior_tree/config/: bt_executor.yaml
spot_behavior_tree/include/behaviors/: behavior_context.cpp
spot_behavior_tree/include/spot_behavior_tree/: axis_tolerance_xyz.h  double_vector.h  orientation_xyzw.h  position_xyz.h  string_vector.h
spot_behavior_tree/include/spot_behavior_tree/plugins/action/: add_collision_object_to_planning_scene.h  add_pose_stamped_to_vector.h  add_ros_node_to_blackboard.h  add_to_string_vector.h  add_to_vector.h  append_orientation_constraint.h  attach_object_to_link.h  clear_markers.h  create_collision_object_from_solid_primitive.h  create_collision_object_message.h  create_joint_state.h  create_solid_primitive_box.h  create_stamped_pose.h  detach_object_from_link.h  execute_moveit_trajectory.h  execute_mtc_task.h  execute_trajectory.h  generate_cuboid_grasp_poses.h  get_collision_object_from_planning_scene.h  get_current_planning_scene.h  initialize_motion_constraints.h  initialize_mtc_task.h  is_collision_object_in_planning_scene.h  is_object_attached_to.h  move_gripper_action.h  plan_moveit_cartesian_path.h  plan_moveit_target.h  plan_mtc_task.h  reset_pose_stamped_vector.h  reset_string_vector.h  reset_vector.h  set_moveit_joint_value_target.h  set_moveit_named_target.h  set_moveit_path_constraints.h  set_moveit_planning_time.h  set_moveit_pose_stamped_target.h  setup_move_group.h  setup_mtc_attach_object.h  setup_mtc_batch_pose_ik.h  setup_mtc_connect_with_rrt.h  (+13 more)
spot_behavior_tree/launch/: bt_executor.launch.py  executor.launch.xml
spot_behavior_tree/plugins/action/: add_collision_object_to_planning_scene.cpp  add_pose_stamped_to_vector.cpp  add_ros_node_to_blackboard.cpp  add_to_string_vector.cpp  add_to_vector.cpp  append_orientation_constraint.cpp  attach_object_to_link.cpp  clear_markers.cpp  create_collision_object_from_solid_primitive.cpp  create_joint_state.cpp  create_solid_primitive_box.cpp  create_stamped_pose.cpp  detach_object_from_link.cpp  execute_moveit_trajectory.cpp  execute_mtc_task.cpp  execute_trajectory.cpp  generate_cuboid_grasp_poses.cpp  get_collision_object_from_planning_scene.cpp  get_current_planning_scene.cpp  initialize_motion_constraints.cpp  initialize_mtc_task.cpp  is_collision_object_in_planning_scene.cpp  is_object_attached_to.cpp  move_gripper_action.cpp  plan_moveit_cartesian_path.cpp  plan_moveit_target.cpp  plan_mtc_task.cpp  reset_pose_stamped_vector.cpp  reset_string_vector.cpp  reset_vector.cpp  set_moveit_joint_value_target.cpp  set_moveit_named_target.cpp  set_moveit_path_constraints.cpp  set_moveit_planning_time.cpp  set_moveit_pose_stamped_target.cpp  setup_move_group.cpp  setup_mtc_attach_object.cpp  setup_mtc_batch_pose_ik.cpp  setup_mtc_connect_with_rrt.cpp  setup_mtc_current_state.cpp  (+12 more)
spot_behavior_tree/src/: bt_executor.cpp
spot_core/: README.md  package.xml  setup.cfg  setup.py
spot_core/config/: spot_parameters_example.yaml  waypoints.yaml
spot_core/launch/: spot_bringup.launch.py
spot_core/spot_core/: spot_commander.py  spot_control_node.py  spot_service_provider.py  spot_time_sync.py
spot_core/spot_core/manipulation/: arm_trajectory_action_server.py  gripper_action_server.py  joint_trajectory.py  spot_arm_controller.py
spot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
spot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  spot.ros2_control.xacro  spot.srdf  spot.urdf.xacro  trajopt_planning.yaml
spot_moveit_config/launch/: moveit_spot.launch.py
spot_simple_controllers/: README.md  package.xml  setup.cfg  setup.py
spot_simple_controllers/config/: spot_parameters.yaml
spot_simple_controllers/launch/: spot_bringup.launch.py
spot_simple_controllers/spot_simple_controllers/: spot_sdk_client.py  spot_service_provider.py  spot_simple_controllers_node.py  spot_time_sync.py  time_stamp.py
(+17 files in other folders)
