<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_behavior_tree</name>
  <version>0.0.0</version>
  <description>Spot ros2 behavior trees</description>
  <maintainer email="github@bryceikeda.net">Bryce Ikeda</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>behaviortree_ros2</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_task_constructor_core</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>